--- a/akvo/rsr/spa/app/modules/program/styles.scss
+++ b/akvo/rsr/spa/app/modules/program/styles.scss
@@ -19,7 +19,6 @@
       position: relative;
       z-index: 1000;
       margin-top: -85px;
-      margin-bottom: 30px;
     }
   }
   header.main-header .ant-tabs a{
@@ -1115,5 +1114,88 @@
       font-size: 11px;
       color: #333;
     }
+  }
+}
+
+.program-popover-form{
+  width: 320px;
+  .ant-select{
+    width: 100%;
+  }
+}
+
+.program-filters-grid{
+  &>ul{
+    margin-top: 35px;
+    margin-bottom: -10px!important;
+    li{
+      max-width: calc(50% - 50px);
+      &:nth-of-type(2){
+        h4{
+          font-weight: normal;
+        }
+      }
+    }
+    h4{
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+  }
+  .period-caption{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #9E9E9E;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  ul{
+    display: flex;
+    margin-bottom: 0px;
+    padding-bottom: 0;
+    li{
+      .label{
+        font-weight: 500;
+        font-size: 10px;
+        color: rgba(0, 0, 0, 0.4);
+        text-transform: uppercase;
+      }
+    }
+    .anticon-right{
+      font-size: 19px;
+      margin: 0 13px;
+      transform: translateY(19px);
+      opacity: 0.6;
+    }
+  }
+  .row{
+    padding-left: 20px;
+    display: flex;
+    position: relative;
+    li{
+      &:not(:first-child){
+        margin-left: 30px;
+        position: relative;
+        &:before{
+          content: " ";
+          position: absolute;
+          width: 1px;
+          background-color: #DADADA;
+          height: 30px;
+          left: -15px;
+          top: 4px;
+        }
+      }
+    }
+  }
+}
+.bg-dark {
+  background-color: #212121 !important;
+  color: #fff !important;
+  .ant-scroll-number-only {
+    font-weight: bold;
+    color: #000;
   }
 }
